--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <div class="div-block-9">
                     <div class="text-9">
                         <div class="text-9 text-9">
-                            <span class="faizal-is-an-unreal-engine-developer-0">Playable third person Metahuman character in UE5</span>
+                            <span class="faizal-is-an-unreal-engine-developer-0">Playable Metahuman character in UE5</span>
                         </div>
                     </div>
                 </div>
