--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
                 <div class="div-block-9">
                     <div class="text-9">
                         <div class="text-9 text-9">
-                            <span class="faizal-is-an-unreal-engine-developer-0">Playable Metahuman character in UE5</span>
+                            <span class="faizal-is-an-unreal-engine-developer-0">Playable Metahuman Character in UE5</span>
                         </div>
                     </div>
                 </div>
                 <div class="div-block-10">
-                    <div class="he-create-video-games-and-assist-clients-with-unreal-engine-based-projects">John Driscoll, United states</div>
+                    <div class="he-create-video-games-and-assist-clients-with-unreal-engine-based-projects">John Driscoll, United States</div>
                 </div>
             </div>
         </div>
@@ -79,7 +79,7 @@
         <div class="container-10 w-container">
             <div class="div-block-7">
                 <div class="he-create-video-games-and-assist-clients-with-unreal-engine-based-projects">
-                    Require quick asset swap of Unreal Engine Third Person Template mannequin to a Metahuman with customizable animations, including the ability to swap between different Metahumans. Need facial animation rig for cinematics in Sequencer.
+                    Require quick asset swap of Unreal Engine Third Person Template mannequin to a Metahuman with including the ability to swap between different Metahumans,as well as swapping out the included animations, like changing the walking animation to a limping one.The controllable Metahuman should have the facial animation rig still included.
                 </div>
             </div>
         </div>
