--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </div>
         <div class="container-10 w-container">
             <div style="padding-top:56.17021276595745%" class="w-embed-youtubevideo youtube">
-                <iframe src="https://www.youtube.com/embed/F9cWQYQJ-5w?rel=0&amp;controls=1&amp;autoplay=0&amp;mute=0&amp;start=0" frameBorder="0" style="position:absolute;left:0;top:0;width:100%;height:100%;pointer-events:auto" allow="autoplay; encrypted-media" allowfullscreen="" title="New ISL Game Android || ISL 2021-22 Game Android || ft. Indian Super League || ISL Game in Mobile"></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/kKzLCscTnSE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </div>
     </div>
