--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Work 2</title>
+    <title>Work 3</title>
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <link href="https://uploads-ssl.webflow.com/641d5f1678a45b346d43eeba/css/muhammedfaizalpk-026b404e0ae1d26c0b8604.webflow.8216a908b.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com" rel="preconnect" />
@@ -55,12 +55,12 @@
                 <div class="div-block-9">
                     <div class="text-9">
                         <div class="text-9 text-9">
-                            <span class="faizal-is-an-unreal-engine-developer-0">Create combat player controllers in UE4</span>
+                            <span class="faizal-is-an-unreal-engine-developer-0">Simple Quiz Game in UE5</span>
                         </div>
                     </div>
                 </div>
                 <div class="div-block-10">
-                    <div class="he-create-video-games-and-assist-clients-with-unreal-engine-based-projects">Morgan Ohrstrom, United states</div>
+                    <div class="he-create-video-games-and-assist-clients-with-unreal-engine-based-projects">Kate Reed, Norway</div>
                 </div>
             </div>
         </div>
@@ -79,7 +79,8 @@
         <div class="container-10 w-container">
             <div class="div-block-7">
                 <div class="he-create-video-games-and-assist-clients-with-unreal-engine-based-projects">
-                    We need a developer for create combat controllers for our action RPG characters, including attacks, combo, run, equip, etc. Locomotion is already created. So you need to assign our provided combat animations to the character and blueprint to button input. Additionally, you will need to attach the provided weapon and attach our provided particle effect weapon trail.
+                    The player should be able to walk up to a sign. This can be made out of a simple cube or any shape in general. You can choose where to place the signs, just make sure they are visible, preferably scale the signs large. There should be 10 signs placed out. And there should be a collision box around each sign to trigger the quiz widget pop-up.<br /><br />
+                    When the player interacts with the sign, they are prompted with a quiz question. The type of questions should be:- five signs that has a three-alternatives check box answer option, and five signs with a true/false button option.The questions can be random. <br /><br />When all the quiz questions have been answered, the player should walk up to a different type of sign "A new shape". This sign should be the end of the quiz walk. At this sign the number of correct answers should be displayed. For example:- you answered 3/10 questions correctly. This should be followed by the answers to the questions that were answered incorrectly.
                 </div>
             </div>
         </div>
@@ -98,7 +99,7 @@
         <div class="container-10 w-container">
             <div class="div-block-8">
                 <div class="he-create-video-games-and-assist-clients-with-unreal-engine-based-projects">
-                    The client has provided project files comprising of 7 characters, their respective weapons, and particle effects to be used in trials of the weapons.
+                    Client has provided project file with environment included.
                 </div>
             </div>
         </div>
