--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div class="container-10 w-container">
             <div class="div-block-8">
                 <div class="he-create-video-games-and-assist-clients-with-unreal-engine-based-projects">
-                    Client has provided project file with environment included.
+                    Client has provided project file with environment (level) included.
                 </div>
             </div>
         </div>
