--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Work 4</title>
+    <title>Work 5</title>
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <link href="https://uploads-ssl.webflow.com/641d5f1678a45b346d43eeba/css/muhammedfaizalpk-026b404e0ae1d26c0b8604.webflow.8216a908b.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com" rel="preconnect" />
@@ -55,12 +55,12 @@
                 <div class="div-block-9">
                     <div class="text-9">
                         <div class="text-9 text-9">
-                            <span class="faizal-is-an-unreal-engine-developer-0">Basic Blueprint Game in UE4</span>
+                            <span class="faizal-is-an-unreal-engine-developer-0">Bake Materials and Create Texture Atlas in UE4</span>
                         </div>
                     </div>
                 </div>
                 <div class="div-block-10">
-                    <div class="he-create-video-games-and-assist-clients-with-unreal-engine-based-projects">Mohaimen Al-Janabi, Belgium</div>
+                    <div class="he-create-video-games-and-assist-clients-with-unreal-engine-based-projects">Fabio Rychter, Brazil</div>
                 </div>
             </div>
         </div>
@@ -79,7 +79,9 @@
         <div class="container-10 w-container">
             <div class="div-block-7">
                 <div class="he-create-video-games-and-assist-clients-with-unreal-engine-based-projects">
-                    I am seeking an individual with expertise in blueprint programming, as I require assistance with implementing game design for a small-scale project. The project will require three iterations to finalize, after which I will provide three rounds of feedback. I anticipate a timely completion due to the small nature of the task.
+                    I need help unifying many static meshes from different asset packs.
+                    They all have their unique material and I can´t afford that many drawcalls.<br /><br />
+                    There are 73 static meshes. I need you to:<br />1-Bake the materials.<br />2-Export the textures.<br />Create an Atlas following a guide.<br />4-Create a new material instance and replace the old material.
                 </div>
             </div>
         </div>
@@ -98,7 +100,7 @@
         <div class="container-10 w-container">
             <div class="div-block-8">
                 <div class="he-create-video-games-and-assist-clients-with-unreal-engine-based-projects">
-                    The client has submitted a project file containing fundamental shapes and blueprints.
+                    The client has submitted the project file inclusive of 3D meshes and materials.
                 </div>
             </div>
         </div>
